# arxiv-digest

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: reading-list.yml  summarize.yml
src/: arxiv_fetcher.py  github_client.py  issue_creator.py  main.py  paper_filter.py  reading_list.py  semantic_scholar_fetcher.py  summarizer.py  utils.py
src/models/: __init__.py  paper.py  paper_summary.py
