[project]
name = "arxiv-paper-summarizer"
version = "0.1.0"
description = "Summarize ArXiv papers using GitHub Models and create GitHub Issues"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "openai>=2.8.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "pymupdf>=1.26.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_fetcher.py", "src/issue_creator.py", "src/main.py", "src/summarizer.py"]

